--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ main {
     width: 100%;
     justify-content: center;
     align-items: center;
-    padding-bottom: 30px;
+    /*padding-bottom: 30px;*/
 }
 
 /*page 1*/
@@ -314,6 +314,7 @@ tr:nth-of-type(2n) {
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 20px;
     /* height: 100vh; */
     /* text-align: center; */
 }
