Remove social networks hover on a tag and replace with hover color on the icon itself

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,8 +650,8 @@ footer {
         background-color: #fff;
     }
 
-    .social-networks a:hover {
-        background-color: blueviolet;
+    i:hover {
+        color: grey;
     }
 }
 
