Style Friday, sundat and shoulder press video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,9 @@ video {
 
 .tuesday-videos,
 .wednesday-videos,
-.saturday-videos {
+.friday-videos,
+.saturday-videos,
+.sunday-videos {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
