--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ main {
 /*page 1*/
 /* Hero section */
 .hero {
-    background: url(../images/hero_image.webp) no-repeat center center/cover;
+    background: url("../images/hero_image.webp") no-repeat center center/cover;
     background-color: blueviolet;
     background-position: 70%;
     height: 500px;
